--- a/MIST143_Traveler/Views/Shopping/List.cshtml
+++ b/MIST143_Traveler/Views/Shopping/List.cshtml
@@ -170,8 +170,10 @@
                                     </form>
                                     <form method="post" action="AddToSession" class="addshoppingCart">
                                         <input type="hidden" name="TravelProductId" value="@Model.產品列表.FirstOrDefault().TravelProductId" />
+                                        <input type="hidden" name="TravelProductName" value="@Model.產品列表.FirstOrDefault().TravelProductName" />
                                         <input type="hidden" name="Count" value="1" id="postProductNum" />
-                                        <input type="submit" value="加入購物車"  data-bs-toggle="modal" data-bs-target="#joinModal" class="btn btn-main mx-3" />
+                                        <input type="hidden" name="Price" value="@Model.產品列表.FirstOrDefault().Price" />
+                                        <input type="submit" value="加入購物車" data-bs-toggle="modal" data-bs-target="#joinModal" class="btn btn-main mx-3" />
                                     </form>
 
                                 </div>
@@ -299,9 +301,7 @@
     </div>
     @section Scripts{
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.6.1.js"
-                integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+
         <script src="~/js/travelOrder.js"></script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script>
