--- a/MIST143_Traveler/Views/CustomerCenter/List.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/List.cshtml
@@ -170,7 +170,8 @@
         //===================修改資料===================
         const bb = () => {
 
-            var postData = {
+            var postData =
+            {
                Address: $("#Address").val(),
                MemberName: $("#MemberName").val(),
                Phone: $("#Phone").val(),
