--- a/MIST143_Traveler/Views/Shared/Components/Coupon/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/Coupon/Default.cshtml
@@ -1,4 +1,7 @@
 ﻿@model MIST143_Traveler.MViewModel.會員中心檢視優惠券
+@using Microsoft.AspNetCore.Http
+@using System.Text.Json;
+@inject IHttpContextAccessor Accessor
 @{
     ViewData["Title"] = "Coupon";
 }
@@ -12,30 +15,81 @@
     <div class="col-12 上面空間">
         <h3>優惠券</h3>
         <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="請輸入優惠碼" aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button class="btn btn-warning 按鈕顏色" type="button" id="button-addon2">兌換</button>
+           @{ 
+               var OBJ = Accessor.HttpContext.Session.GetString(CDictionary.SK_Login);//取得登入者的SESSION
+               var v = JsonSerializer.Deserialize<Member>(OBJ);
+           }
+            <input hidden id="idid" value="@v.MembersId" />
+            
+
+            <input type="text" class="form-control" name="GiftKey" id="Giftnum" placeholder="請輸入優惠碼" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button class="btn btn-warning 按鈕顏色" onclick="Gift()" type="button" id="button-addon2">兌換</button>
         </div>
 
 
         <div class="container row row-2">
             <!--優惠券-->
-            <div class="coupon coupon-wave-left coupon-wave-right coupon-yellow-gradient">
-                <div class="coupon-info coupon-info-right-dashed">
-                    <div class="coupon-store">@Model.優惠券列表.FirstOrDefault().CouponName</div>
-                    <div class="coupon-price">¥5.00<span>优惠券</span></div>
-                    <div class="coupon-description">訂單滿'@Model.優惠券列表.FirstOrDefault().Condition</div>
-                </div>
-                <div class="coupon-get">
-                    <div class="coupon-desc">副券</div>
-                    <div class="coupon-expiry-date">2019.10.01<br />2019.10.30</div>
-                </div>
-            </div>
+            @{
+                List<string> Coupon = new List<string>();
+                foreach (var co in Model.優惠券列表)
+                {
+                    Coupon.Add($@"<div class='coupon coupon-wave-left coupon-wave-right coupon-yellow-gradient'>
+                            <div class='coupon-info coupon-info-right-dashed'>
+                                <div class='coupon-store'>{co.CouponName}</div>
+                                <div class='coupon-price'>折扣{co.Discount}<span>優惠券</span></div>
+                                <div class='coupon-description'>訂單限滿{co.Condition}使用</div>
+                            </div>
+                            <div class='coupon-get'>
+                                <div class='coupon-desc'>副券</div>
+                                <div class='coupon-expiry-date'>到期日{co.ExDate}</div>
+                            </div>
+                        </div>");
+                }
+            }
+            @foreach (var g in Coupon)
+            {
+                @Html.Raw(g);
+            }
             <!--優惠券-->
         </div>
     </div>
 </body>
 
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+
+    <script>
+        const Gift = () => {
+            var Giftdata =
+            {
+                GiftKey: $("#Giftnum").val(),
+                MembersId:$("#idid").val(),
+            }
+            console.log(Giftdata)
+        $.ajax({
+            url: '@Url.Action("Giftkey", "CustomerCenter")',
+            method: 'Post',
+            dataType: 'Json',
+            data: { Cou: Giftdata },
+            success: function (datas) {
+                if (!datas.res) {
+                    Swal.fire({
+                        icon: 'error',
+                        title: '輸入錯誤',
+                        text: datas.msg,
+
+                    })
+                    return;
+                }
+                Swal.fire(
+                    '您的變更已儲存!',
+                    '讚啦!',
+                    'success'
+                )
+            }
+
+        })
+        };
+
+    </script>
+
+    @*@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}*@
