--- a/MIST143_Traveler/Views/Shopping/List.cshtml
+++ b/MIST143_Traveler/Views/Shopping/List.cshtml
@@ -301,7 +301,6 @@
     </div>
     @section Scripts{
 
-
         <script src="~/js/travelOrder.js"></script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script>
@@ -346,6 +345,14 @@
 
             const toMyFavorites = () =>
             {
+                //function love(i) {
+                //    var c = $("#heart" + i).attr('class')
+                //    if (c == 'bi bi-heart') {
+                //        $("#heart" + i).toggleClass("bi bi-heart-fill")
+                //    }
+                //    else
+                //        $("#heart" + i).toggleClass("bi bi-heart")
+                //}
 
                 var Tofa = {
                     TravelProductId:$("#PID").val(),
