--- a/MIST143_Traveler/Views/CustomerCenter/List.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/List.cshtml
@@ -170,7 +170,8 @@
         //===================修改資料===================
         const bb = () => {
 
-            var postData = {
+            var postData =
+            {
                Address: $("#Address").val(),
                MemberName: $("#MemberName").val(),
                Phone: $("#Phone").val(),
@@ -308,7 +309,7 @@
         })
 
         $('#btncop').click(function () {
-        $('#cont').load('@Url.Content("~/CustomerCenter/Coupon")')
+        $('#cont').load('@Url.Action("VIEWCoupon", "CustomerCenter", new { v.MembersId })')
             $(this).addClass("btn btn-outline-warning 按鈕顏色2 active") //優惠券按鈕
             $('#btnorder').removeClass("active")
             $('#btnlove').removeClass("active")
