--- a/MIST143_Traveler/Views/CustomerCenter/Createmember.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/Createmember.cshtml
@@ -222,8 +222,9 @@
                     '註冊成功!',
                     '讚啦!',
                     'success'
-
-                )
+                ).then(function (result) {
+                    window.location.href = "@Url.ActionLink("newLoginpag","CustomerCenter")";
+                })
             }
         })
                 /*form.submit();*/
