--- a/MIST143_Traveler/Views/CustomerCenter/CommentEdit.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/CommentEdit.cshtml
@@ -20,14 +20,15 @@
             <input asp-for="評論.FirstOrDefault().產品名稱" class="form-control" disabled="disabled" />
         </div>
 
+        
 
         <div class="form-group">
             <label asp-for="@Model.評論.FirstOrDefault().內容" class="control-label"></label>
-            <input asp-for="評論.FirstOrDefault().內容" id="cen" class="form-control" />
+            <textarea asp-for="評論.FirstOrDefault().內容" id="cen" class="form-control"></textarea>
         </div>
-        <div class="form-group">
+        <div class="form-group mb-3">
             <label asp-for="@Model.評論.FirstOrDefault().分數" class="control-label"></label>
-            <select asp-for="評論.FirstOrDefault().分數" id="point">
+            <select class="form-select" asp-for="評論.FirstOrDefault().分數" id="point">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -38,8 +39,10 @@
         </div>
 
 
-        <div class="form-group">
-            <input type="submit" value="修改" onclick="se()" class="btn btn-primary" />
+        <div class="form-group d-flex justify-content-end">
+            <div>
+                <input type="submit" value="修改" onclick="se()" class="btn btn-primary" />
+            </div>
         </div>
         @*</form>*@
     </div>
