--- a/MIST143_Traveler/Views/Shared/Components/Coupon/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/Coupon/Default.cshtml
@@ -80,11 +80,19 @@
                     })
                     return;
                 }
-                Swal.fire(
-                    '您的變更已儲存!',
-                    '讚啦!',
-                    'success'
-                )
+                Swal.fire({
+                    title: 'Custom width, padding, color, background.',
+                    width: 600,
+                    padding: '3em',
+                    color: '#716add',
+                    background: '#fff url(/images/trees.png)',
+                    backdrop: `
+                              rgba(0,0,123,0.4)
+                               url("/images/gift.gif")
+                            left top
+                            no-repeat
+                                `
+                })
             }
 
         })
