--- a/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
+++ b/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
@@ -60,15 +60,15 @@
                                         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
                                             <div class="accordion-body">
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                    <input class="form-check-input" type="checkbox"name="info[]" value="台灣" id="flexCheckDefault">
                                                     <label>台灣</label>
                                                 </div>
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                    <input class="form-check-input" type="checkbox"name="info[]" value="韓國" id="flexCheckDefault">
                                                     <label>韓國</label>
                                                 </div>
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                    <input class="form-check-input" type="checkbox"name="info[]" value="日本" id="flexCheckDefault">
                                                     <label>日本</label>
                                                 </div>
                                             </div>
@@ -83,11 +83,11 @@
                                         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
                                             <div class="accordion-body">
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                    <input class="form-check-input" type="checkbox"name="info[]" value="" id="flexCheckDefault">
                                                     <label>新加坡</label>
                                                 </div>
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                    <input class="form-check-input" type="checkbox"name="info[]" value="" id="flexCheckDefault">
                                                     <label>泰國</label>
                                                 </div>
                                             </div>
@@ -102,7 +102,7 @@
                                         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                                             <div class="accordion-body">
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                    <input class="form-check-input" type="checkbox"name="info[]" value="" id="flexCheckDefault">
                                                     <label>美國</label>
                                                 </div>
                                             </div>
@@ -117,19 +117,19 @@
                                         <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
                                             <div class="accordion-body">
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" disabled>
+                                                    <input class="form-check-input" type="checkbox"name="info[]" value="" id="flexCheckDefault" disabled>
                                                     <label>冰島</label>
                                                 </div>
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                    <input class="form-check-input" type="checkbox"name="info[]" value="" id="flexCheckDefault">
                                                     <label>芬蘭</label>
                                                 </div>
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" disabled>
+                                                    <input class="form-check-input" type="checkbox"name="info[]" value="" id="flexCheckDefault" disabled>
                                                     <label>挪威</label>
                                                 </div>
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                    <input class="form-check-input" type="checkbox"name="info[]" value="" id="flexCheckDefault">
                                                     <label>丹麥</label>
                                                 </div>
                                             </div>
@@ -144,19 +144,19 @@
                                         <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFive">
                                             <div class="accordion-body">
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                    <input class="form-check-input" type="checkbox"name="info[]" value="" id="flexCheckDefault">
                                                     <label>英國</label>
                                                 </div>
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                    <input class="form-check-input" type="checkbox"name="info[]" value="" id="flexCheckDefault">
                                                     <label>法國</label>
                                                 </div>
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" disabled>
+                                                    <input class="form-check-input" type="checkbox"name="info[]" value="" id="flexCheckDefault" disabled>
                                                     <label>荷蘭</label>
                                                 </div>
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" disabled>
+                                                    <input class="form-check-input" type="checkbox"name="info[]" value="" id="flexCheckDefault" disabled>
                                                     <label>愛爾蘭</label>
                                                 </div>
                                             </div>
@@ -171,15 +171,15 @@
                                         <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingSix">
                                             <div class="accordion-body">
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                    <input class="form-check-input" type="checkbox"name="info[]" value="" id="flexCheckDefault">
                                                     <label>德國</label>
                                                 </div>
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" disabled>
+                                                    <input class="form-check-input" type="checkbox"name="info[]" value="" id="flexCheckDefault" disabled>
                                                     <label>奧地利</label>
                                                 </div>
                                                 <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                    <input class="form-check-input" type="checkbox"name="info[]" value="" id="flexCheckDefault">
                                                     <label>瑞士</label>
                                                 </div>
                                             </div>
@@ -206,7 +206,34 @@
 
                 <div class="basic-filter section-filter" style="width:800px;">
                     <div class="basic-filter-left">
-                        @await Component.InvokeAsync("Productlistpagi2")
+                        <div class="basic-filter-left">
+                      
+                                <div>
+                                    <label style="width:90%" for="start">選擇遊玩日期範圍:</label>
+
+                                    <input type="date" @*onclick="datechoise()"*@ id="start123123" name="trip-start"
+                                           min="2022-10-01" max="2022-12-31" class="ipwidth" />
+                                    <!--<input type="date"--> @*onclick="datechoise()"*@
+                                    <!--id="start" name="trip-start"
+                min="2022-10-01" max="2022-12-31" class="ipwidth" />-->
+                                    <button style="width:4%;padding:1%" type="button" id="showw">確定</button>
+                                </div>
+                          
+                                <div class="d-flex justify-content-end" @*style="border:1px red solid"*@>
+                                    <label for="list">排序方式:</label>
+                                    <select name="list" id="choise">
+                                        <option value="1">最推薦</option>
+                                        <option value="2">最低價</option>
+                                        <option value="3">最熱賣</option>
+                                        <option value="4">新上架</option>
+                                        <option value="5">高評價</option>
+                                    </select>
+                                </div>
+                            @*<div id="aeio">
+
+                            </div>*@
+                      
+                        </div>
                     </div>
 
 
@@ -286,7 +313,7 @@
             var url = "@Url.Content("~/ProductListPage2/selecter")"
             var day = `?date=${aa}`;
             console.log(aa);
-            $("#aeio").load(url + day);
+            $("#ans").load(url + day);
 
         })
         </script>
@@ -303,9 +330,82 @@
         function show(){
             var content = document.getElementById("text");
             document.getElementById("txt").textContent = content.value;
-        }
+            }
+            let arr = [];
+            $('.form-check-input').click(function (event) {
+                let targ = $(event.target);
+                let lage = targ.prop('checked');
+                console.log(lage);
+                if (lage) {
+                    arr.push(targ.val());
+
+                }
+                else {
+                    arr.splice(arr.indexOf(targ.val()),1)
+
+                }
+                console.log(arr);
+            });
+            //function happy() {
+            //    $.post(`/ProductListPage2/filter`, { keyword: arr }, function (data) {
 
 
+            //    })
+            //}
+            //$("#flexCheckDefault").click(function () {
+            //    var checkvalue = $(this).val();
+            //    alert(checkvalue);
+            //});
+
+            @*var data = {
+                info: $("input[type=checkbox][name=info]:checked").val(),
+
+            }
+            console.log(data)
+            $.ajax({
+                url: '@Url.Action("filter", "ProductListPage2")',
+                method: 'Post',
+                dataType: 'Json',
+                data: { keyword: data },
+                success: function (datas) {
+                    if (!datas.res) {
+                        Swal.fire({
+                            icon: 'error',
+                            title: '輸入錯誤',
+                            text: datas.msg,
+
+                        })
+                        return;
+                    }
+                    Swal.fire(
+                        '註冊成功!',
+                        '讚啦!',
+                        'success'
+
+                    )
+                }
+                }
+            })*@
+
+            @*var div = decodeURIComponent($('input[type=checkbox]').serialize());
+            $.ajaxSetup({
+                type: 'GET',
+                url: '@Url.Action("filter", "ProductListPage2")',
+                dataType: 'json',
+                data: {''}
+            })*@
+
+
+            @*$(document).ready(function () {
+                $("input:checkbox").change(function () {
+                    var isChecked = $("input:checkbox").is(":checked") ? 1 : 0;
+                    $.ajax({
+                        url: '@Url.Action("filter", "ProductListPage2")',
+                        type: 'POST',
+                        data: { strID: $("input:checkbox").attr("id"), strState: isChecked }
+                    });
+                });
+            });*@
 
         </script>
 
